Wed Oct  9 09:28:28 2002  Ossama Othman  <ossama@uci.edu>

	* TAOACE.dsw:
	* TAOACE_Static.dsw:

	  Corrected project dependencies for DsNotifyLogAdmin project.

	* orbsvcs/orbsvcs/Svc_Utils.dsp:

	  More fixes for redundant "-I../../tao" preprocessor directives.
	  Addresses compile-time problems in the "DLL Release"
	  configuration.

	* orbsvcs/orbsvcs/Makefile (TAO_ORBSVCS):

	  Due to popular demand and broken builds, temporarily removed the
	  four Event Logging Services from the list of ORB services to
	  build. 

Tue Oct  8 16:28:05 2002  Jaiganesh Balasubramanian  <jai@doc.ece.uci.edu>

	* orbsvcs/tests/LoadBalancing/GenericFactory/Basic.cpp:
	* orbsvcs/tests/LoadBalancing/GenericFactory/Basic.h:
	* orbsvcs/tests/LoadBalancing/GenericFactory/Test.idl:
	* orbsvcs/tests/LoadBalancing/GenericFactory/client.cpp:
	  Addressed the code review comments by Ossama.

Tue Oct  8 11:56:39 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/LoadBalancing/LoadBalancer_i.cpp:
	* orbsvcs/orbsvcs/LoadBalancing/LoadBalancer_i.h:
	* orbsvcs/orbsvcs/LoadBalancing/LoadBalancer_i.i:
	* orbsvcs/orbsvcs/LoadBalancing/LoadBalancing_Strategy.cpp:
	* orbsvcs/orbsvcs/LoadBalancing/LoadBalancing_Strategy.h:
	* orbsvcs/orbsvcs/LoadBalancing/LoadBalancing_Strategy.i:
	* orbsvcs/orbsvcs/LoadBalancing/Minimum_Dispersion.cpp:
	* orbsvcs/orbsvcs/LoadBalancing/Minimum_Dispersion.h:
	* orbsvcs/orbsvcs/LoadBalancing/ReplicaLocator.cpp:
	* orbsvcs/orbsvcs/LoadBalancing/ReplicaLocator.h:
	* orbsvcs/orbsvcs/LoadBalancing/ReplicaProxy.cpp:
	* orbsvcs/orbsvcs/LoadBalancing/ReplicaProxy.h:
	* orbsvcs/orbsvcs/LoadBalancing/ReplicaProxy.i:
	* orbsvcs/orbsvcs/LoadBalancing/Round_Robin_Strategy.cpp:
	* orbsvcs/orbsvcs/LoadBalancing/Round_Robin_Strategy.h:

	  Removed sources left over from the old load balancer prototype.
	  They are no longer used.

Tue Oct  8 11:29:21 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/Log/LogRecordStore.cpp:

	  Removed explicit template instantion for